[package]
name = "hitokage-core"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
simple_logger = { workspace = true }
gdk4 = { workspace = true }
gdk4-win32 = { workspace = true }
glib = { workspace = true }
gtk4 = { workspace = true }
relm4 = { workspace = true }
relm4-macros = { workspace = true }
mlua = { workspace = true }
lua-src = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
komorebi-client = { workspace = true }
win32-display-data = { workspace = true }
chrono = "0.4.38"
indexmap = { version = "2.3.0", features = ["serde"] }
rustc-hash = "2.0.0"
serde-value = "0.7.0"

[dependencies.windows]
workspace = true
features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_SystemInformation",
  "Wdk_System_SystemServices",
]

[features]
development = []
