[package]
name = "hitokage-lua"
version = "0.1.0"
edition = "2021"
authors = ["Cody Duong <cody.qd@gmail.com>"]

[dependencies]
hitokage-core = { path = "../hitokage-core/" }
hitokage-macros = { path = "../hitokage-macros/" }
luahelper = { path = "../luahelper/" }
anyhow = { workspace = true }
log = { workspace = true }
simple_logger = { workspace = true }
mlua = { workspace = true }
lua-src = { workspace = true }
relm4 = { workspace = true }
serde = { workspace = true }
smol = "2.0.0"
gdk4 = { workspace = true }
gdk4-win32 = { workspace = true }
gtk4 = { workspace = true }
win32-display-data = { workspace = true }

[dependencies.windows]
workspace = true
features = [
  "Win32_Graphics_Gdi",
]

