[package]
name = "hitokage"
description = "A configurable status bar"
version = "0.1.0"
edition = "2021"
authors = ["Cody Duong <cody.qd@gmail.com>"]
license = "MIT"

[dependencies]
notify = "6.1.1"
dirs = { workspace = true }
hitokage-core = { path = "../hitokage-core/" }
hitokage-lua = { path = "../hitokage-lua/" }
anyhow = { workspace = true }
log = { workspace = true }
simple_logger = { workspace = true }
gdk4 = { workspace = true }
gdk4-win32 = { workspace = true }
glib = { workspace = true }
gtk4 = { workspace = true }
relm4 = { workspace = true }
relm4-macros = { workspace = true }
mlua = { workspace = true }
lua-src = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
komorebi-client = {workspace = true}
tokio = { workspace = true }
bon = { workspace = true }

chrono = "0.4.38"
notify-debouncer-full = "0.3.1"
# komorebi-client = { git = "https://github.com/LGUG2Z/komorebi", tag = "v0.1.26"}

[dependencies.windows]
workspace = true
features = [
  "Win32_System_Threading",
  "Win32_UI_HiDpi",
  "Win32_System_Console",
]

[features]
development = []
