[package]
name = "luahelper"
version = "0.1.0"
authors = ["Wez Furlong <wez@wezfurlong.org>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bstr = "1.0"
log = "0.4"
mlua = { workspace = true }
wezterm-dynamic = { git = "https://github.com/wez/wezterm", rev = "2b76c63bb618d26609434c06282c8755229c4099" }