[package]
name = "luahelper"
version = "0.1.0"
authors = ["Wez Furlong <wez@wezfurlong.org>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bstr = "1.0"
log = "0.4"
mlua = { workspace = true }
wezterm-dynamic = { git = "https://github.com/wez/wezterm", rev = "4906789a6d61da58f73b95f89b59c41af60e0f3b" }